--- a/fridge-service/pom.xml
+++ b/fridge-service/pom.xml
@@ -30,7 +30,7 @@
 
         <dependency>
             <groupId>org.example</groupId>
-            <artifactId>cocktail-service</artifactId>
+            <artifactId>cocktail-model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
